# claude-agent-graph

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EPIC_4_IMPLEMENTATION.md  EPIC_8_IMPLEMENTATION.md  FEATURES.md  HYBRID_TESTING_STRATEGY.md  IMPLEMENTATION_PLAN.md  ISSUES_TODO.md  LICENSE  PRD.md  README.md  TESTING_GUIDE.md  TESTING_SETUP.md  TEST_REPORT.md  WEBAPP_SETUP.md  app.py  contributing.html  demo_interactive.py  demo_interactive_v2.py  graph_demo.html  graph_demo_v2.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  test_workflow.py
.github/workflows/: docs.yml  pages.yml  release.yml  static.yml  test.yml  tests.yml
_modules/: index.html
_modules/claude_agent_graph/: agent_manager.html
_modules/claude_agent_graph/backends/: filesystem.html
_sources/: contributing.rst.txt  examples.rst.txt
_sources/api/: execution.rst.txt
_sources/user_guide/: concepts.rst.txt  execution_modes.rst.txt  faq.rst.txt
api/: agent_manager.html  graph.html  models.html  storage.html  topology.html
dev/: dev.ipynb
docs/: changelog.rst  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: changelog.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree
docs/_build/doctrees/api/: agent_manager.doctree  exceptions.doctree  execution.doctree  graph.doctree  models.doctree  storage.doctree  topology.doctree
docs/_build/doctrees/user_guide/: best_practices.doctree  concepts.doctree  execution_modes.doctree  faq.doctree  installation.doctree  messaging.doctree  persistence.doctree  quickstart.doctree  storage.doctree  topologies.doctree  troubleshooting.doctree
docs/_build/html/: .buildinfo  changelog.html  examples.html  genindex.html  index.html  py-modindex.html  searchindex.js  sitemap.xml
docs/_build/html/_modules/claude_agent_graph/: exceptions.html  execution.html  graph.html  models.html  storage.html  topology.html
docs/_build/html/_modules/claude_agent_graph/backends/: base.html
docs/_build/html/_sources/user_guide/: quickstart.rst.txt  troubleshooting.rst.txt
docs/_build/html/api/: exceptions.html  execution.html
docs/_build/html/user_guide/: execution_modes.html  faq.html  installation.html  messaging.html  persistence.html  storage.html  troubleshooting.html
docs/api/: agent_manager.rst  exceptions.rst  graph.rst  models.rst  storage.rst  topology.rst
docs/user_guide/: best_practices.rst  concepts.rst  installation.rst  messaging.rst  persistence.rst  storage.rst  testing.rst  topologies.rst
examples/: README.md  collaborative_network.py  control_commands.py  dag_pipeline.py  execution_modes_demo.py  star_dispatcher.py  tree_hierarchy.py
implementation_plans/: EPIC_5_IMPLEMENTATION.md  EPIC_6_IMPLEMENTATION.md  EPIC_9_IMPLEMENTATION.md
src/claude_agent_graph/: __init__.py  agent_manager.py  checkpoint.py  exceptions.py  execution.py  graph.py  models.py  storage.py  topology.py  transactions.py  visualization.py
src/claude_agent_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/claude_agent_graph/backends/: __init__.py  base.py  filesystem.py
templates/: index.html
tests/: __init__.py  conftest.py  test_agent_manager.py  test_checkpoint.py  test_e2e.py  test_execution.py  test_flask_api.py  test_flask_e2e_playwright.py  test_graph.py  test_integration.py  test_models.py  test_storage.py  test_topology.py  test_transactions.py  test_visualization.py
tests/backends/: test_filesystem.py
user_guide/: best_practices.html  concepts.html  quickstart.html  topologies.html
web_app/: README.md  app.py  demo_interactive.py  demo_interactive_v2.py  demo_simple.html
